test/asm/invalid-opt.asm
opt b123
opt b_1
opt b10
opt b00
opt g12345
opt g012_
opt g$123
opt g0234
opt gxxyy
opt gxyzy
opt pxy
opt p1234
opt Qxy
opt Q1234
opt Q32
opt r99999999999999999999999999
opt W
opt
popo
